fix translations and make apply changes button alwasy visible

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
@@ -3329,6 +3329,11 @@ span.sheet-spellconcentration
     position: relative;
 }
 
+.sheet-monster_confirm div div,
+.sheet-mancer_confirm div div {
+    margin: 0 2px;
+}
+
 .sheet-monster_confirm input[type=checkbox] + span,
 .sheet-mancer_confirm input[type=checkbox] + span {
     font-size: 20px;
@@ -3340,14 +3345,21 @@ span.sheet-spellconcentration
     border: 1px solid black;
 }
 
+.sheet-mancer_confirm_flag[value="1"] ~ .sheet-mancer_confirm
+{
+    width: 350px;
+    margin: -70px 0 0 -195px;
+}
+
 .sheet-mancer_confirm input[type=checkbox] {
     height: 40px;
 }
 
 .sheet-mancer_confirm input[type=checkbox] + span {
     font-size: 15px;
-    line-height: 40px;
+    line-height: 1.2em;
     height: 40px;
+    padding-top: 3px;
 }
 
 .sheet-monster_confirm .sheet-yes,
@@ -4024,6 +4036,12 @@ span.sheet-spellconcentration
 .sheet-charmancer .sheet-mancer_progress div {
     background-color: red;
     height: 100%;
+}
+
+.sheet-charmancer .sheet-bottombar button[type="finish"].sheet-choice {
+    display: inline-block;
+    opacity: .4;
+    pointer-events: none;
 }
 
 /* Firefox 3.5+ */
